modtool: add basic ZSH completion support
This could do much more, like supporting the syntax of subcommands.

If someone wants to pick up here, oh-my-zsh's vagrant plugin seems
educative enough: https://github.com/ohmyzsh/ohmyzsh/blob/00ccb449907d322c6bfa53f17e96cbf48651fee3/plugins/vagrant/_vagrant

Signed-off-by: Marcus Müller <mmueller@gnuradio.org>

--- a/gr-utils/modtool/CMakeLists.txt
+++ b/gr-utils/modtool/CMakeLists.txt
@@ -28,6 +28,10 @@ install(
     DESTINATION ${GR_PREFSDIR}
 )
 
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/support/_gr_modtool
+  DESTINATION ${GR_DATA_DIR}/zsh/site-functions
+)
+
 GR_PYTHON_INSTALL(
     PROGRAMS    gr_modtool
     DESTINATION ${GR_RUNTIME_DIR}
