--- a/gr-uhd/python/uhd/bindings/CMakeLists.txt
+++ b/gr-uhd/python/uhd/bindings/CMakeLists.txt
@@ -16,6 +16,7 @@ list(APPEND uhd_python_files
 if(ENABLE_UHD_RFNOC)
   add_definitions(-DGR_ENABLE_UHD_RFNOC)
   list(APPEND uhd_python_files
+    rfnoc_block_python.cc
     rfnoc_graph_python.cc
     rfnoc_rx_streamer_python.cc
     rfnoc_tx_streamer_python.cc
