--- a/gr-uhd/python/uhd/bindings/CMakeLists.txt
+++ b/gr-uhd/python/uhd/bindings/CMakeLists.txt
@@ -17,6 +17,8 @@ if(ENABLE_UHD_RFNOC)
   add_definitions(-DGR_ENABLE_UHD_RFNOC)
   list(APPEND uhd_python_files
     rfnoc_block_python.cc
+    rfnoc_ddc_python.cc
+    rfnoc_duc_python.cc
     rfnoc_graph_python.cc
     rfnoc_rx_radio_python.cc
     rfnoc_rx_streamer_python.cc
