--- a/gr-utils/modtool/templates/gr-newmod/python/howto/bindings/CMakeLists.txt
+++ b/gr-utils/modtool/templates/gr-newmod/python/howto/bindings/CMakeLists.txt
@@ -41,7 +41,7 @@ add_custom_target(
   copy_bindings_for_tests ALL
   COMMAND
     ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/*.so"
-    ${CMAKE_BINARY_DIR}/test_modules/howto/
+    ${CMAKE_BINARY_DIR}/test_modules/gnuradio/howto/
   DEPENDS howto_python)
 
 install(TARGETS howto_python DESTINATION ${GR_PYTHON_DIR}/gnuradio/howto COMPONENT pythonapi)
