--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -10,7 +10,7 @@ jobs:
   # We start with checking C++ formatting. No one gets free CPU cycles if they
   # can't use clang-format.
   check-formatting:
-    name: Check C++/Python Formatting
+    name: Check C++ Formatting
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -19,6 +19,11 @@ jobs:
         source: '.'
         exclude: './volk'
         extensions: 'h,hpp,cpp,cc,cc.in'
+  check-python-formatting:
+    name: Check Python Formatting
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
     - uses: quentinguidee/pep8-action@v1
       with:
         arguments: '--max-line-length=120 --ignore E265,E266,E402,E501,E704,E712,E713,E714,E711,E722,E741,W504,W605 --exclude *.yml.py'
@@ -39,7 +44,7 @@ jobs:
       run: 'cd /build && make doxygen_target'
   linux-docker:
   # All of these shall depend on the formatting check (needs: check-formatting)
-    needs: check-formatting
+    needs: [check-formatting, check-python-formatting]
     runs-on: ubuntu-latest
     # The GH default is 360 minutes (it's also the max as of Feb-2021). However
     # we should fail sooner. The only reason to exceed this time is if a test
