--- a/gnuradio-runtime/lib/CMakeLists.txt
+++ b/gnuradio-runtime/lib/CMakeLists.txt
@@ -337,6 +337,7 @@ if(ENABLE_TESTING)
     qa_logger.cc
     qa_host_buffer.cc
     qa_vmcircbuf.cc
+    qa_stream_iterators.cc
   )
   list(APPEND GR_TEST_TARGET_DEPS gnuradio-runtime gnuradio-pmt)
 
