--- a/gr-qtgui/grc/qtgui_sink_x.block.yml
+++ b/gr-qtgui/grc/qtgui_sink_x.block.yml
@@ -17,7 +17,7 @@ parameters:
     default: '""'
 -   id: fftsize
     label: FFT Size
-    dtype: enum
+    dtype: int
     default: '1024'
     options: ['32','64','128','256','512','1024','2048','4096','8192','16384','32768']
 -   id: wintype
