--- a/gr-qtgui/grc/qtgui_waterfall_sink_x.block.yml
+++ b/gr-qtgui/grc/qtgui_waterfall_sink_x.block.yml
@@ -250,6 +250,9 @@ outputs:
     optional: true
     hide: ${ not showports }
 
+asserts:
+- ${fftsize >= 32 and fftsize <= 32768}
+
 templates:
     imports: |-
         from PyQt5 import Qt
