--- a/gr-blocks/grc/blocks.tree.yml
+++ b/gr-blocks/grc/blocks.tree.yml
@@ -38,6 +38,7 @@
   - blocks_file_meta_source
   - blocks_file_meta_sink
   - blocks_tagged_file_sink
+  - blocks_sigmf_sink_minimal
 - IQ Correction:
   - blocks_correctiq_auto
   - blocks_correctiq_man
