changed it to be a hier block and use normal File Sink

--- a/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
+++ b/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
@@ -5,7 +5,7 @@ flags: [ python, deprecated ]
 parameters:
 -   id: filename
     label: File Name
-    dtype: string
+    dtype: file_save
 -   id: sample_rate
     label: Sample Rate
     dtype: float
