--- a/gr-blocks/grc/blocks_sigmf_source_minimal.block.yml
+++ b/gr-blocks/grc/blocks_sigmf_source_minimal.block.yml
@@ -9,10 +9,10 @@ parameters:
 -   id: type
     label: Output Type
     dtype: enum
-    options: [complex, float, int, short, byte]
+    options: [complex float (fc32_le), real float (rc32_le), complex short (sc16_le), real short (rc16_le)]
     option_attributes:
-        size: [gr.sizeof_gr_complex, gr.sizeof_float, gr.sizeof_int, gr.sizeof_short,
-            gr.sizeof_char]
+        type: [complex, float, short, short]
+        size: [gr.sizeof_gr_complex, gr.sizeof_float, gr.sizeof_short, gr.sizeof_short]
     hide: part
 -   id: repeat
     label: Repeat
@@ -20,19 +20,10 @@ parameters:
     default: 'True'
     options: ['True', 'False']
     option_labels: ['Yes', 'No']
--   id: vlen
-    label: Vector Length
-    dtype: int
-    default: '1'
-    hide: ${ 'part' if vlen == 1 else 'none' }
 -   id: begin_tag
     label: Add begin tag
     dtype: raw
     default: pmt.PMT_NIL
--   id: offset
-    label: Offset
-    dtype: int
-    default: '0'
 -   id: length
     label: Length
     dtype: int
@@ -40,18 +31,14 @@ parameters:
 
 outputs:
 -   domain: stream
-    dtype: ${ type }
-    vlen: ${ vlen }
-
-asserts:
-- ${ vlen > 0 }
+    dtype: ${ type.type }
 
 templates:
     imports: |-
         from gnuradio import blocks
         import pmt
     make: |-
-        blocks.file_source(${type.size}*${vlen}, ${file}, ${repeat}, ${offset}, ${length})
+        blocks.file_source(${type.size}, ${file}, ${repeat}, 0, ${length})
         self.${id}.set_begin_tag(${begin_tag})
     callbacks:
     - open(${file}, ${repeat})
@@ -60,7 +47,7 @@ templates:
 cpp_templates:
     includes: ['#include <gnuradio/blocks/file_source.h>']
     declarations: 'blocks::file_source::sptr ${id};'
-    make: 'this->${id} =blocks::file_source::make(${type.size}*${vlen}, ${file}, ${repeat}, ${offset}, ${length});'
+    make: 'this->${id} =blocks::file_source::make(${type.size}, ${file}, ${repeat}, 0, ${length});'
     callbacks:
     - open(${file}, ${repeat})
     translations:
