better handling of optional fields in sigmf sink
This allows frequency and the various free form string fields to be
populated in the metafile only if they are configured in the sink block.

Signed-off-by: Jacob Gilbert <jacob.gilbert@protonmail.com>

--- a/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
+++ b/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
@@ -21,7 +21,8 @@ parameters:
 -   id: center_freq
     label: Center Frequency
     dtype: float
-    default: 0
+    options: [np.nan]
+    option_labels: ['None']
 -   id: author
     label: Author
     dtype: string
@@ -43,7 +44,9 @@ asserts:
 - ${ len(filename) > 0 }
 
 templates:
-    imports: from gnuradio import blocks
+    imports: |-
+        from gnuradio import blocks
+        import numpy as np
     make: |-
         blocks.sigmf_sink_minimal(
             item_size=${type.size},
