--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -134,3 +134,6 @@ jobs:
       run: 'cd /build && make -j2 -k'
     - name: Make Test
       run: 'cd /build && ctest --output-on-failure'
+  call-conda-build:
+    needs: [check-formatting, check-python-formatting]
+    uses: gnuradio/gnuradio/.github/workflows/conda-build.yml@main
