added samp_rate as default for the sink block

--- a/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
+++ b/gr-blocks/grc/blocks_sigmf_sink_minimal.block.yml
@@ -18,6 +18,7 @@ parameters:
 -   id: sample_rate
     label: Sample Rate
     dtype: float
+    default: samp_rate
 -   id: center_freq
     label: Center Frequency
     dtype: float
