--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -136,4 +136,4 @@ jobs:
       run: 'cd /build && ctest --output-on-failure'
   call-conda-build:
     needs: [check-formatting, check-python-formatting]
-    uses: ./.github/workflows/conda-build.yml@
+    uses: ./.github/workflows/conda-build.yml@${{ github.head_ref }}
