--- a/grc/blocks/json_config.block.yml
+++ b/grc/blocks/json_config.block.yml
@@ -22,6 +22,8 @@ templates:
     imports: |-
         import json
         from jsonschema import validate
+    # Note that yaml makes it really hard to insert spaces at the beginning of the line.
+    # The "\" char below is used to escape the space at the beginning of a line.
     var_make: "with open(${config_file}) as fid:\n\
               \    self.${id} = ${id} = json.load(fid)\n\
               self.${id}_schema = ${id}_schema = ${schema_file}\n\
@@ -36,6 +38,21 @@ documentation: |-
     Sample Rate: yaml_config["samp_rate"]
 
     Optionally, a json schema can be specified to validate the configuration.
+
+    For example, you could have a json file that contains:
+    {
+      "samp_rate": 1e6,
+    }
+    And a schema that contains
+    {
+      "type": "object",
+      "properties": {
+        "samp_rate": {"type": "number", "exclusiveMinimum": 0}
+       }
+    }
+
+    If the id of this block is json_config_0, then you can access the samp rate
+    in other blocks as json_config_0["samp_rate"]
 
 
 file_format: 1
