--- a/grc/blocks/yaml_config.block.yml
+++ b/grc/blocks/yaml_config.block.yml
@@ -1,5 +1,5 @@
 id: yaml_config
-label: Yaml Config
+label: YAML Config
 flags: [ show_id, python ]
 
 parameters:
@@ -13,10 +13,10 @@ parameters:
     default: ""
 # Not my favorite thing because it doesn't explicitly close the file, but
 # it should be okay.  The garbage collector will take care of it.
-value: "${ toml.load(open(config_file)) }"
+value: "${ yaml.safe_load(open(config_file)) }"
 
 asserts:
-- ${ schema_file == "" or validate(yaml.load(open(config_file)), json.load(open(schema_file))) is None }
+- ${ schema_file == "" or validate(yaml.safe_load(open(config_file)), json.load(open(schema_file))) is None }
 
 templates:
     imports: |-
@@ -39,6 +39,20 @@ documentation: |-
     Optionally, a json schema can be specified to validate the configuration.
     It may sound odd to use a json schema for a yaml file, but it works and 
     jsonschema is a rich specification.
+
+    For example, you could have a yaml file that contains:
+    samp_rate: 1e6
+
+    And a schema that contains
+    {
+      "type": "object",
+      "properties": {
+        "samp_rate": {"type": "number", "exclusiveMinimum": 0}
+      }
+    }
+
+    If the id of this block is yaml_config_0, then you can access the samp rate
+    in other blocks as yaml_config_0["samp_rate"]
 
 
 file_format: 1
