gr: registry and reflection capability
Create a GR registry that maintains knowledge about what modules,
blocks, etc. are available, and has the ability to return generic block
constructors.

Basic usage would be
auto list = gr::registry::modules()
auto f = gr::registry::factory("math","vector_source_f")
auto blk = f(.... map of string/pmt)

Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/include/gnuradio/meson.build
+++ b/gr/include/gnuradio/meson.build
@@ -46,7 +46,8 @@ runtime_headers = [
     'runtime.h',
     'buffer_sm.h',
     'executor.h',
-    'constants.h'
+    'constants.h',
+    'registry.h'
 ]
 
 install_headers(runtime_headers, subdir : 'gnuradio')
