--- a/blocklib/streamops/load/load.yml
+++ b/blocklib/streamops/load/load.yml
@@ -8,6 +8,7 @@ parameters:
 -   id: iterations
     label: Iterations (Load)
     dtype: size
+    settable: true
 -   id: use_cb
     label: Use Custom Buffers
     dtype: bool
