blocklib: update static port types to standard
In previous commits, the templated blocks were given standard type names
such as cf32 and rf32.  However the fixed type ports were still at the
c++ names.  This makes those consistent

Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/analog/fm_deemph/fm_deemph.yml
+++ b/blocklib/analog/fm_deemph/fm_deemph.yml
@@ -22,12 +22,12 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: float
+    type: rf32
 
 -   domain: stream
     id: out
     direction: output
-    type: float
+    type: rf32
 
 implementations:
 -   id: cpu
