--- a/blocklib/analog/quadrature_demod/quadrature_demod.yml
+++ b/blocklib/analog/quadrature_demod/quadrature_demod.yml
@@ -42,12 +42,12 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: gr_complex
+    type: cf32
 
 -   domain: stream
     id: out
     direction: output
-    type: float
+    type: rf32
 
 
 implementations:
