--- a/blocklib/audio/alsa_sink/alsa_sink.yml
+++ b/blocklib/audio/alsa_sink/alsa_sink.yml
@@ -39,7 +39,7 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: float
+    type: rf32
     multiplicity: parameters/num_inputs
 
 implementations:
