--- a/blocklib/streamops/interleaved_short_to_complex/interleaved_short_to_complex.yml
+++ b/blocklib/streamops/interleaved_short_to_complex/interleaved_short_to_complex.yml
@@ -26,7 +26,7 @@ ports:
 -   domain: stream
     id: out
     direction: output
-    type: gr_complex
+    type: cf32
 
 implementations:
 -   id: cpu
