--- a/blocklib/math/complex_to_mag_squared/complex_to_mag_squared.yml
+++ b/blocklib/math/complex_to_mag_squared/complex_to_mag_squared.yml
@@ -15,13 +15,13 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: gr_complex
+    type: cf32
     shape: parameters/vlen
 
 -   domain: stream
     id: out
     direction: output
-    type: float
+    type: rf32
     shape: parameters/vlen
 
 implementations:
