--- a/blocklib/math/conjugate/conjugate.yml
+++ b/blocklib/math/conjugate/conjugate.yml
@@ -8,12 +8,12 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: gr_complex
+    type: cf32
 
 -   domain: stream
     id: out
     direction: output
-    type: gr_complex
+    type: cf32
 
 implementations:
 -   id: cpu
